[style] reformatting